# sierra-viva

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  main.py  scheduler.py
app/api/: alerts.py  cafes.py  crags.py  gyms.py  vegetation.py
app/models/: __init__.py  cafe.py  crag.py  gym.py  satellite.py  vegetation.py
app/services/: firms.py  gfw.py  sentinel.py
app/templates/: crags.html  dashboard.html  map.html
scripts/: fetch_history.py  refetch_updated.py  seed.py  start_db.sh
seed/: data.json
